Change the overflow in the body trying to prevent the scroll

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 
 body {
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -52,7 +53,6 @@ body {
 .d-block {
     display: block;
 }
-
 
 
 /* header---------------> */
@@ -296,6 +296,10 @@ div {
 @media screen and (max-width:744px) {
 
     .search {
+        display: none;
+    }
+
+    .search-box {
         display: none;
     }
 
